More notes. Type alias renaming. Better tests, so silly stuff doesn't show up from the log.
