# src/Authentication/AuthenticationController.php
@@ -9,48 +9,50 @@ use App\Core\Http\Exceptions\HttpMethodNotAllowedException;
 use App\Core\Http\Exceptions\HttpUnauthorizedException;
 use App\Core\Http\Request;
 use JsonException;
-use OpenApi\Attributes as OA;
+use OpenApi\Attributes as OAT;
 use Symfony\Component\HttpFoundation\JsonResponse;
 
 class AuthenticationController extends BaseController
 {
     /**
-     * Perform login.
-     *
      * @return JsonResponse
-     * @throws JsonException
      * @throws HttpMethodNotAllowedException
      * @throws HttpUnauthorizedException
+     * @throws JsonException
      */
-    #[OA\Post(path: '/login', operationId: 'authLogin', summary: 'Login with server id, username and password', tags: ['auth'])]
-    #[OA\RequestBody(
-        new OA\JsonContent(
-            required  : ['server_id', 'username', 'password'],
+    #[OAT\Post(
+        path       : '/login',
+        operationId: 'authLogin',
+        summary    : 'Login with server id, username and password',
+        requestBody: new OAT\RequestBody(
+            content: new OAT\JsonContent(
+                properties: [
+                    new OAT\Property(property: 'server_id', type: 'number'),
+                    new OAT\Property(property: 'username', type: 'string'),
+                    new OAT\Property(property: 'password', type: 'string'),
+                ]
+            )
+        ),
+        tags       : ['auth']
+    )]
+    #[OAT\Response(
+        response   : 200,
+        description: 'JWT Response',
+        content    : new OAT\JsonContent(
             properties: [
-                new OA\Property('server_id', new OA\Schema(type: 'number')),
-                new OA\Property('username', new OA\Schema(type: 'string')),
-                new OA\Property('password', new OA\Schema(type: 'string')),
+                new OAT\Property(property: 'message', type: 'string', example: 'success'),
+                new OAT\Property(
+                    property: 'jwt',
+                    type    : 'string',
+                    example : 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJodHRwOlwvXC9sb2NhbGhvc3Q6ODAw'
+                ),
             ]
         )
     )]
-    #[OA\Response(
-        response   : 200,
-        description: 'JWT Response',
-        content    : new OA\MediaType(
-            mediaType: 'application/json',
-            schema   : new OA\Schema(
-                allOf: [
-                    new OA\Schema(
-                        properties: [
-                            new OA\Property('message', new OA\Schema(type: 'string')),
-                            new OA\Property('jwt', new OA\Schema(type: 'string')),
-                        ]
-                    ),
-                ]
-            ),
-        )
+    #[OAT\Response(
+        response   : 401,
+        description: 'Unauthorized'
     )]
-    #[OA\Response(response: 401, description: 'Unauthorized')]
     public function login(): JsonResponse
     {
         if (Request::METHOD_POST !== $this->request->getMethod()) {
